Archive2/bf/7dfba11ba54cd5/output
main.cpp: In function 'int main()':
main.cpp:7:140: error: expected primary-expression before ')' token
 #define FOO(...) do { static thread_local BAR<__LINE__,__COUNTER__,args_size(__VA_ARGS__)> bar(__FILE__,__func__,#__VA_ARGS__,##__VA_ARGS__); } while (false)
                                                                                                                                            ^
main.cpp:29:5: note: in expansion of macro 'FOO'
     FOO();
     ^
main.cpp: In function 'int main()':
main.cpp:7:140: error: expected primary-expression before ')' token
 #define FOO(...) do { static thread_local BAR<__LINE__,__COUNTER__,args_size(__VA_ARGS__)> bar(__FILE__,__func__,#__VA_ARGS__,##__VA_ARGS__); } while (false)
                                                                                                                                            ^
main.cpp:29:5: note: in expansion of macro 'FOO'
     FOO();
     ^
main.cpp:7:126: warning: token pasting of ',' and __VA_ARGS__ is a GNU extension [-Wgnu-zero-variadic-macro-arguments]
#define FOO(...) do { static thread_local BAR<__LINE__,__COUNTER__,args_size(__VA_ARGS__)> bar(__FILE__,__func__,#__VA_ARGS__,##__VA_ARGS__); } while (false)
                                                                                                                             ^
main.cpp:7:127: warning: token pasting of ',' and __VA_ARGS__ is a GNU extension [-Wgnu-zero-variadic-macro-arguments]
#define FOO(...) do { static thread_local BAR<__LINE__,__COUNTER__,args_size(__VA_ARGS__)> bar(__FILE__,__func__,#__VA_ARGS__,##__VA_ARGS__); } while (false)
                                                                                                                              ^
2 warnings generated.
40201
sizeof(n) = 4 SIZE=0 NUM_ARGS="0 file: "main.cpp" func: "main" args: ""
sizeof(n) = 16 SIZE=3 NUM_ARGS="3 file: "main.cpp" func: "main" args: ""i=",i,"now is the time for all good men to come to the aid of their country.""
